--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <p>
-        hola gente, este es mi sitio web
+        hola gente, este es mi sitio web, 
+        siganme para mas contenido perron.
 
     </p>
 </body>
